src/objects/UnitAreaTaxationHeader__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Description__c</fullName>
        <label>Batch Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Batch_No__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Batch No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Batch_Status__c</fullName>
        <label>Batch Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnProcessed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Change Area Costs</relationshipLabel>
        <relationshipName>Change_Area_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( ISPICKVAL(Batch_Status__c, &apos;Processed&apos;),IMAGE(&apos;https://c.cs5.content.force.com/servlet/servlet.FileDownload?file=015O00000008wau&apos;,&apos;alt&apos;,20, 20), IMAGE(&apos;https://c.cs5.content.force.com/servlet/servlet.FileDownload?file=015O00000008wap&apos;,&apos;alt&apos;,20, 20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <label>Change Area Cost</label>
    <nameField>
        <label>Change Area Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UnitAreaTaxationHeader</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Batch_Date_Cant_be_less_Project_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Batch_Date__c &lt;&gt;   TODAY()</errorConditionFormula>
        <errorDisplayField>Batch_Date__c</errorDisplayField>
        <errorMessage>Please Enter Today&apos;s Date.</errorMessage>
    </validationRules>
</CustomObject>